tests/ui/unicode-quote.stderr
error: unknown character escape: `\u{201c}`
  --> $DIR/unicode-quote.rs:4:20
   |
LL |     dbg!("Is this \“ a small sized quote or a big sized quote. \“ ");
   |                    ^ unknown character escape
   |
   = help: \u{201c} is not an ascii quote, but may look like one in some fonts; consider writing it in its escaped form for clarity.
help: if you meant to use a unicode quote; consider using its escaped form for clarity
   |
LL -     dbg!("Is this \“ a small sized quote or a big sized quote. \“ ");
LL +     dbg!("Is this \u{201c} a small sized quote or a big sized quote. \“ ");
   |

error: unknown character escape: `\u{201c}`
  --> $DIR/unicode-quote.rs:4:65
   |
LL |     dbg!("Is this \“ a small sized quote or a big sized quote. \“ ");
   |                                                                 ^ unknown character escape
   |
   = help: \u{201c} is not an ascii quote, but may look like one in some fonts; consider writing it in its escaped form for clarity.
help: if you meant to use a unicode quote; consider using its escaped form for clarity
   |
LL -     dbg!("Is this \“ a small sized quote or a big sized quote. \“ ");
LL +     dbg!("Is this \“ a small sized quote or a big sized quote. \u{201c} ");
   |

error: aborting due to 2 previous errors

